--- a/challenge-07.html
+++ b/challenge-07.html
@@ -24,9 +24,9 @@
     <!--FELLOWS -->
     <section class="Fellows">
         <h2 class="size">
-            Fellows wanted dead (or alive if you want to eat them later)
+            Fellows wanted dead
         </h2>
-
+        <span>(or alive if you want to eat them later)</span>
     </section>
 
     <!--CONTENT-->
