--- a/challenge-07.html
+++ b/challenge-07.html
@@ -25,16 +25,18 @@
     <section class="Fellows">
         <h2 class="size">
             Fellows wanted dead
+
+            <span>(or alive if you want to eat them later)</span>
         </h2>
-        <span>(or alive if you want to eat them later)</span>
     </section>
 
     <!--CONTENT-->
     <section class="content">
-        <article class="one"></article>
-        <article class="two"></article>
-        <article class="three"></article>
+        <article class="one">1</article>
+        <article class="two">2</article>
+        <article class="three">3</article>
     </section>
+
     <hr>
     <form class="formulaire">
         <h2>Contact us</h2>
@@ -47,9 +49,29 @@
 
 
             <textarea placeholder="Your message"></textarea>
-        </div>
 
+            <div class="button-container">
+                <button type="submit">Send !</button>
+            </div>
+
+        </div>
     </form>
+    <footer>
+        <div>
+            <a href="#">About Us</a>
+            <a href="#">Fellows</a>
+            <a href="#">Join our Army</a>
+        </div>
+        <div style="flex-grow: 1">
+            <a href="#">FAQ</a>
+            <a href="#">Reward conditons</a>
+            <a href="#">Legal mentions</a>
+        </div>
+        <div>
+            <a href="#">Sauron4Ever.com</a>
+            <a href="#">Follow on twitter</a>
+        </div>
+    </footer>
 </body>
 
 </html>
